# openlistmedia

./: .dockerignore  .gitignore  ARCHITECTURE.md  CLAUDE.md  Dockerfile  MEDIA_WALL.md  README.md  config.example.yml  config_loader.py  docker-compose.yml  media_wall.db-shm  media_wall.db-wal  media_wall.db.new  media_wall_service.py  pyproject.toml  test_openlist_sdk.py  tmdb_sdk.py
.claude/: settings.local.json
.github/workflows/: docker-image.yml
.omc/: project-memory.json
backend/: __init__.py  app.py  fastapi_app.py  main.py  main_fastapi.py  scheduler.py
backend/api/: __init__.py  fastapi_routes.py  fastapi_static.py  server.py
backend/api/routes/: __init__.py  media_routes.py
backend/config/: __init__.py  settings.py
backend/dto/: __init__.py  media_dto.py  responses.py
backend/repository/: __init__.py  media_repository.py
backend/scanner/: __init__.py  openlist_scanner.py
backend/service/: __init__.py  media_service.py
frontend/: .env.example  .eslintrc.cjs  .prettierignore  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.js  vite.config.ts
frontend/src/: main.tsx
frontend/src/app/: App.tsx  layout.tsx  providers.tsx  router.tsx
frontend/src/pages/: access-gate-page.tsx  categories-page.tsx  (+4 more)
media_wall_site/: app.js  styles.css
media_wall_site/data/: library.json
old/: media_wall_builder.py  serve_media_wall.py  test_tmdb_sdk.py
old/media_wall_site/: index.html
openlist_sdk/: __init__.py  client.py  exceptions.py
openlist_sdk.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
(+18 files in other folders)
